# internal/dto/product_dto.go
@@ -1,0 +1,15 @@
+package dto
+
+type ProductResponse struct {
+	ID          string  `json:"id"`
+	Name        string  `json:"name"`
+	Price       float64 `json:"price"`
+	Description string  `json:"description"`
+}
+
+type UpsertProductRequest struct {
+	Name        string  `json:"name" binding:"required"`
+	Price       float64 `json:"price" binding:"required,gt=0"`
+	Description string  `json:"description"`
+}
+
